# docs/swagger.yaml
@@ -221,6 +221,44 @@ info:
   title: Beta API
   version: "1.0"
 paths:
+  /{api-key}/get_singleton_states:
+    post:
+      consumes:
+      - application/json
+      description: |-
+        Singletons are like souls - when a coin dies (gets spent), they might move on to a new coin or disappear (melt). Beta views these transitions as changes of state.
+        This endpoint takes multiple optional arguments and returns the states that match the criteria. Most body parameters are self-explanatory: if they match a field of the returned struct model (e.g., 'height' or 'launcher_id'), they act as filters. Only states with the specified values will be returned.
+        The first special parameter is 'limit' - by default, this function returns 100 results at most. Use this parameter to tweak this value.
+        'order_by' can be 'coin_id', 'header_hash', 'height', 'parent_coin_id', 'puzzle_hash', 'amount', 'launcher_id', or 'inner_puzzle_hash'. The default ordering is ascending, but that can be changed by setting the 'order' parameter to 'desc'.
+        If your query returns more than 100 results and you need all of them for some reasons, you can also use the 'offset' parameter.
+        Note: Two singleton states CAN have the same coin id but a different 'melted' value - the primary key is a composite one: (coin_id, melted)
+      parameters:
+      - description: The arguments (see description for more details)
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/GetSingletonStatesArgs'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/GetSingletonStatesResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/NoAPIKeyResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: returns singleton states for given conditions
+      tags:
+      - Singleton States
   /get_peak_synced_block:
     get:
       consumes:
@@ -415,9 +453,9 @@ paths:
       - Sync
 securityDefinitions:
   ApiKeyAuth:
-    description: The API key can be passed in the URL (between base host and `/beta/`),
-      as a header (`X-API-Key`), or as a GET parameter at the end of the URL (`endpoint?api-key=`)(also
-      works for POST requests)
+    description: The API key can also be included in the URL or as a GET parameter
+      - please see [https://docs.fireacademy.io/developers/using-api-keys](https://docs.fireacademy.io/developers/using-api-keys)
+      for more details.
     in: header
     name: X-API-Key
     type: apiKey
